<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_ack"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_ack" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_assignment_late_black_24dp"
            android:title="@string/nav_status" />
        <item
            android:id="@+id/nav_rNumber"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/nav_rNumber" />


    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_signout"
                android:title="@string/action_signout" />
        </menu>
    </item>

</menu>
