<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SigninActivity">


     <!--<ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:id="@+id/formBack"
            />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/formLogo"
        android:text="Bihar ePDS"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_text"
        android:textColor="@color/white"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/formLogo"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_sub_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_user_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/sign_in_button"
                android:textStyle="normal"
                android:background="@drawable/register_button"
                android:layout_gravity="right"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="36dp"
                android:layout_marginRight="20dp"
                android:id="@+id/signin_btn" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
