<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="2dp"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingStart="4dp"
    android:paddingTop="4dp"
    android:textColor="@color/colorBackground"
    tools:context="in.gov.bihar.sfc.biharepds.fragment.AcknowledgementFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edittext_border"
                    android:orientation="horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/view">

                    <Spinner
                        android:id="@+id/s_month"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_border"
                        android:padding="5dp"
                        android:spinnerMode="dropdown"
                        android:textColor="#FFFFFF"
                        android:textSize="10dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|right"
                        android:background="@drawable/drop_down"
                        android:contentDescription="@string/app_name" />
                </FrameLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edittext_border"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/view" >

                    <Spinner
                        android:id="@+id/s_year"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_border"
                        android:padding="5dp"
                        android:spinnerMode="dropdown"
                        android:textColor="#FFFFFF"
                        android:textSize="10dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|right"
                        android:background="@drawable/drop_down"
                        android:contentDescription="@string/app_name" />
                </FrameLayout>

            </RelativeLayout>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/displayValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10sp"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:stretchColumns="1"
                android:visibility="gone"
                >

                <TableRow>

                    <TextView
                        android:id="@+id/lblText"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_span="2"
                        android:text="Allocated Remaining Quantity in Quintal"
                        android:textColor="@color/colorOrange"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow>

                    <TextView

                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="10sp"
                        android:text="AAY Rice:            "
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/lblAAYRice"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginTop="10sp"
                        android:background="@color/colorBackground"
                        android:text="@string/ack_aay_wheat"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/lblAAYWheat"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:scrollHorizontally="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:background="@color/colorBackground"
                        android:text="PHH Rice:"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/lblPHHRice"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:background="@color/colorBackground"
                        android:text="PHH Wheat:"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/lblPHHWheat"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                </TableRow>

            </TableLayout>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/editable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10sp"
                android:orientation="vertical"
                android:padding="10dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:id="@+id/lbleditTitle"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_span="2"
                        android:text="@string/ack_edit_title"
                        android:textColor="@color/colorOrange"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"/>

                </TableRow>

                <TableRow
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="AAY Rice:            "
                        android:textSize="22dp"
                        />

                    <EditText
                        android:id="@+id/aay_rice"
                        android:layout_column="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:inputType="numberDecimal"
                        android:textSize="30dp"
                        android:textColor="@color/colorPrimaryDark"
                         />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:background="@color/colorBackground"
                        android:text="@string/ack_aay_wheat"
                        android:textSize="22dp"/>

                    <EditText
                        android:id="@+id/aay_wheat"
                        android:layout_column="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:inputType="numberDecimal"
                        android:textSize="30dp"
                        android:textColor="@color/colorPrimaryDark"/>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/ack_phh_rice"
                        android:textSize="22dp"/>

                    <EditText
                        android:id="@+id/phh_rice"
                        android:layout_column="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:inputType="numberDecimal"
                        android:textSize="30dp"
                        android:textColor="@color/colorPrimaryDark"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:text="@string/ack_phh_wheat"
                        android:textSize="22dp"/>

                    <EditText
                        android:id="@+id/phh_wheat"
                        android:layout_column="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:inputType="numberDecimal"
                        android:textSize="30dp"
                        android:textColor="@color/colorPrimaryDark"/>
                </TableRow>

            </TableLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <View
                    android:id="@+id/centerShim"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btClr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/centerShim"
                    android:drawableLeft="@drawable/ic_clear_black_24dp"
                    android:text="Clear" />

                <Button
                    android:id="@+id/btAck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/centerShim"
                    android:drawableLeft="@drawable/ic_done_black_24dp"
                    android:text="Acknowledge" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>